# Intrusion-Detection-System

./: .gitignore  IDS.docx  README.md  hello.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.py
backend/: app.py
data/pcaps/: sample.pcap
data/signatures/: signature_rules.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/assets/css/: styles.css
frontend/assets/js/: alerts.js  analytics.js  dashboard.js  investigations.js  mitre.js
frontend/pages/: about.html  alerts.html  analytics.html  dashboard.html  investigations.html  mitre.html
frontend/public/: output.css
src/: main.py
src/alerts/: alert_system.py
src/analysis/: traffic_analyzer.py
src/capture/: packet_capture.py  pcap_reader.py
src/config/: settings.py
src/detection/: detection_engine.py
src/testing/: test_alerts.py  test_analyzer.py  test_detection.py
src/ui/: test_imports.py
src/ui/backend/: app.py
src/ui/frontend/: dashboard.py
src/utils/: logger.py
ui/backend/: app.py
